sdk/packages/core_aggregate/core_aggregate/lib/src/generated/FlakkaParser.dart
// Generated from Flakka.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'FlakkaListener.dart';
import 'FlakkaBaseListener.dart';
const int RULE_generatorRequest = 0, RULE_protoFile = 1, RULE_sourceFile = 2, 
          RULE_fileDescriptor = 3, RULE_topLevelMessageDescriptor = 4, RULE_messageDescriptor = 5, 
          RULE_messageOption = 6, RULE_messageExtension = 7, RULE_topLevelEnumDescriptor = 8, 
          RULE_messageEnumDescriptor = 9, RULE_enumDescriptor = 10, RULE_enumValueOption = 11, 
          RULE_enumValueOptionExtension = 12, RULE_nestedMessageDescriptor = 13, 
          RULE_messageFieldDescriptor = 14, RULE_messageFieldExtensionDescriptor = 15, 
          RULE_fieldDescriptor = 16, RULE_fieldOption = 17;
class FlakkaParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_T__0 = 1, TOKEN_T__1 = 2, TOKEN_FILES_TO_GENERATE = 3, 
                   TOKEN_GENERATOR_REQUEST_PARAMETER = 4, TOKEN_PROTO_DEPENDENCY_FILE_DESCRIPTOR = 5, 
                   TOKEN_BUILD_SOURCE_FILE_DESCRIPTOR = 6, TOKEN_FILE_NAME = 7, 
                   TOKEN_FILE_PACKAGE = 8, TOKEN_FILE_DEPENDENCY_LIST = 9, 
                   TOKEN_MESSAGE_DESCRIPTOR = 10, TOKEN_MESSAGE_NAME = 11, 
                   TOKEN_EXTENSION_RANGE = 12, TOKEN_ONEOF_DESCRIPTOR = 13, 
                   TOKEN_RESERVED_RANGE = 14, TOKEN_UNINTERPRETED_OPTION = 15, 
                   TOKEN_MESSAGE_EXTENSION = 16, TOKEN_EXTENSION = 17, TOKEN_ENUM_DESCRIPTOR_PROTO = 18, 
                   TOKEN_ENUM_NAME = 19, TOKEN_ENUM_VALUE_OPTION = 20, TOKEN_ENUM_VALUE_OPTION_EXTENSION = 21, 
                   TOKEN_MESSAGE_FIELD_DESCRIPTOR = 22, TOKEN_EXTENSION_FIELD_DESCRIPTOR = 23, 
                   TOKEN_FIELD_NAME = 24, TOKEN_FIELD_NUMBER = 25, TOKEN_FIELD_LABEL = 26, 
                   TOKEN_FIELD_TYPE_AS_ENUM = 27, TOKEN_FIELD_TYPE_AS_STRING = 28, 
                   TOKEN_FIELD_EXTENDEE = 29, TOKEN_DEFAULT_VALUE = 30, 
                   TOKEN_ONE_OF_INDEX = 31, TOKEN_JSON_NAME = 32, TOKEN_FIELD_OPTION_JS_TYPE = 33, 
                   TOKEN_OPTION_TARGET_TYPE = 34, TOKEN_GENERATOR_REQUEST = 35;

  @override
  final List<String> ruleNames = [
    'generatorRequest', 'protoFile', 'sourceFile', 'fileDescriptor', 'topLevelMessageDescriptor', 
    'messageDescriptor', 'messageOption', 'messageExtension', 'topLevelEnumDescriptor', 
    'messageEnumDescriptor', 'enumDescriptor', 'enumValueOption', 'enumValueOptionExtension', 
    'nestedMessageDescriptor', 'messageFieldDescriptor', 'messageFieldExtensionDescriptor', 
    'fieldDescriptor', 'fieldOption'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'('", "')'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, null, null, "FILES_TO_GENERATE", "GENERATOR_REQUEST_PARAMETER", 
      "PROTO_DEPENDENCY_FILE_DESCRIPTOR", "BUILD_SOURCE_FILE_DESCRIPTOR", 
      "FILE_NAME", "FILE_PACKAGE", "FILE_DEPENDENCY_LIST", "MESSAGE_DESCRIPTOR", 
      "MESSAGE_NAME", "EXTENSION_RANGE", "ONEOF_DESCRIPTOR", "RESERVED_RANGE", 
      "UNINTERPRETED_OPTION", "MESSAGE_EXTENSION", "EXTENSION", "ENUM_DESCRIPTOR_PROTO", 
      "ENUM_NAME", "ENUM_VALUE_OPTION", "ENUM_VALUE_OPTION_EXTENSION", "MESSAGE_FIELD_DESCRIPTOR", 
      "EXTENSION_FIELD_DESCRIPTOR", "FIELD_NAME", "FIELD_NUMBER", "FIELD_LABEL", 
      "FIELD_TYPE_AS_ENUM", "FIELD_TYPE_AS_STRING", "FIELD_EXTENDEE", "DEFAULT_VALUE", 
      "ONE_OF_INDEX", "JSON_NAME", "FIELD_OPTION_JS_TYPE", "OPTION_TARGET_TYPE", 
      "GENERATOR_REQUEST"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'Flakka.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  FlakkaParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  GeneratorRequestContext generatorRequest() {
    dynamic _localctx = GeneratorRequestContext(context, state);
    enterRule(_localctx, 0, RULE_generatorRequest);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 36;
      match(TOKEN_GENERATOR_REQUEST);
      state = 37;
      match(TOKEN_FILES_TO_GENERATE);
      state = 38;
      match(TOKEN_GENERATOR_REQUEST_PARAMETER);
      state = 42;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_PROTO_DEPENDENCY_FILE_DESCRIPTOR) {
        state = 39;
        protoFile();
        state = 44;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 48;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_BUILD_SOURCE_FILE_DESCRIPTOR) {
        state = 45;
        sourceFile();
        state = 50;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ProtoFileContext protoFile() {
    dynamic _localctx = ProtoFileContext(context, state);
    enterRule(_localctx, 2, RULE_protoFile);
    try {
      enterOuterAlt(_localctx, 1);
      state = 51;
      match(TOKEN_PROTO_DEPENDENCY_FILE_DESCRIPTOR);
      state = 52;
      fileDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  SourceFileContext sourceFile() {
    dynamic _localctx = SourceFileContext(context, state);
    enterRule(_localctx, 4, RULE_sourceFile);
    try {
      enterOuterAlt(_localctx, 1);
      state = 54;
      match(TOKEN_BUILD_SOURCE_FILE_DESCRIPTOR);
      state = 55;
      fileDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FileDescriptorContext fileDescriptor() {
    dynamic _localctx = FileDescriptorContext(context, state);
    enterRule(_localctx, 6, RULE_fileDescriptor);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 57;
      match(TOKEN_FILE_NAME);
      state = 58;
      match(TOKEN_FILE_PACKAGE);
      state = 59;
      match(TOKEN_FILE_DEPENDENCY_LIST);
      state = 63;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_MESSAGE_DESCRIPTOR) {
        state = 60;
        topLevelMessageDescriptor();
        state = 65;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 69;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_ENUM_DESCRIPTOR_PROTO) {
        state = 66;
        topLevelEnumDescriptor();
        state = 71;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TopLevelMessageDescriptorContext topLevelMessageDescriptor() {
    dynamic _localctx = TopLevelMessageDescriptorContext(context, state);
    enterRule(_localctx, 8, RULE_topLevelMessageDescriptor);
    try {
      enterOuterAlt(_localctx, 1);
      state = 72;
      messageDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MessageDescriptorContext messageDescriptor() {
    dynamic _localctx = MessageDescriptorContext(context, state);
    enterRule(_localctx, 10, RULE_messageDescriptor);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 74;
      match(TOKEN_MESSAGE_DESCRIPTOR);
      state = 75;
      match(TOKEN_MESSAGE_NAME);
      state = 79;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_MESSAGE_FIELD_DESCRIPTOR) {
        state = 76;
        messageFieldDescriptor();
        state = 81;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 85;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_EXTENSION_FIELD_DESCRIPTOR) {
        state = 82;
        messageFieldExtensionDescriptor();
        state = 87;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 91;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 6, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 88;
          nestedMessageDescriptor(); 
        }
        state = 93;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 6, context);
      }
      state = 97;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 94;
          messageEnumDescriptor(); 
        }
        state = 99;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      }
      state = 103;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 8, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 100;
          match(TOKEN_EXTENSION_RANGE); 
        }
        state = 105;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 8, context);
      }
      state = 109;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 9, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 106;
          match(TOKEN_ONEOF_DESCRIPTOR); 
        }
        state = 111;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 9, context);
      }
      state = 115;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 10, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 112;
          messageOption(); 
        }
        state = 117;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 10, context);
      }
      state = 121;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 11, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 118;
          match(TOKEN_RESERVED_RANGE); 
        }
        state = 123;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 11, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MessageOptionContext messageOption() {
    dynamic _localctx = MessageOptionContext(context, state);
    enterRule(_localctx, 12, RULE_messageOption);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 127;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_UNINTERPRETED_OPTION) {
        state = 124;
        match(TOKEN_UNINTERPRETED_OPTION);
        state = 129;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }

      state = 130;
      messageExtension();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MessageExtensionContext messageExtension() {
    dynamic _localctx = MessageExtensionContext(context, state);
    enterRule(_localctx, 14, RULE_messageExtension);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 132;
      match(TOKEN_MESSAGE_EXTENSION);
      state = 136;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_EXTENSION) {
        state = 133;
        match(TOKEN_EXTENSION);
        state = 138;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TopLevelEnumDescriptorContext topLevelEnumDescriptor() {
    dynamic _localctx = TopLevelEnumDescriptorContext(context, state);
    enterRule(_localctx, 16, RULE_topLevelEnumDescriptor);
    try {
      enterOuterAlt(_localctx, 1);
      state = 139;
      enumDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MessageEnumDescriptorContext messageEnumDescriptor() {
    dynamic _localctx = MessageEnumDescriptorContext(context, state);
    enterRule(_localctx, 18, RULE_messageEnumDescriptor);
    try {
      enterOuterAlt(_localctx, 1);
      state = 141;
      enumDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EnumDescriptorContext enumDescriptor() {
    dynamic _localctx = EnumDescriptorContext(context, state);
    enterRule(_localctx, 20, RULE_enumDescriptor);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 143;
      match(TOKEN_ENUM_DESCRIPTOR_PROTO);
      state = 144;
      match(TOKEN_ENUM_NAME);
      state = 148;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_ENUM_VALUE_OPTION) {
        state = 145;
        enumValueOption();
        state = 150;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EnumValueOptionContext enumValueOption() {
    dynamic _localctx = EnumValueOptionContext(context, state);
    enterRule(_localctx, 22, RULE_enumValueOption);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 151;
      match(TOKEN_ENUM_VALUE_OPTION);
      state = 155;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_UNINTERPRETED_OPTION) {
        state = 152;
        match(TOKEN_UNINTERPRETED_OPTION);
        state = 157;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }

      state = 158;
      enumValueOptionExtension();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EnumValueOptionExtensionContext enumValueOptionExtension() {
    dynamic _localctx = EnumValueOptionExtensionContext(context, state);
    enterRule(_localctx, 24, RULE_enumValueOptionExtension);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 160;
      match(TOKEN_ENUM_VALUE_OPTION_EXTENSION);
      state = 164;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_EXTENSION) {
        state = 161;
        match(TOKEN_EXTENSION);
        state = 166;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NestedMessageDescriptorContext nestedMessageDescriptor() {
    dynamic _localctx = NestedMessageDescriptorContext(context, state);
    enterRule(_localctx, 26, RULE_nestedMessageDescriptor);
    try {
      enterOuterAlt(_localctx, 1);
      state = 167;
      messageDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MessageFieldDescriptorContext messageFieldDescriptor() {
    dynamic _localctx = MessageFieldDescriptorContext(context, state);
    enterRule(_localctx, 28, RULE_messageFieldDescriptor);
    try {
      enterOuterAlt(_localctx, 1);
      state = 169;
      match(TOKEN_MESSAGE_FIELD_DESCRIPTOR);
      state = 170;
      fieldDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MessageFieldExtensionDescriptorContext messageFieldExtensionDescriptor() {
    dynamic _localctx = MessageFieldExtensionDescriptorContext(context, state);
    enterRule(_localctx, 30, RULE_messageFieldExtensionDescriptor);
    try {
      enterOuterAlt(_localctx, 1);
      state = 172;
      match(TOKEN_EXTENSION_FIELD_DESCRIPTOR);
      state = 173;
      fieldDescriptor();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldDescriptorContext fieldDescriptor() {
    dynamic _localctx = FieldDescriptorContext(context, state);
    enterRule(_localctx, 32, RULE_fieldDescriptor);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 175;
      match(TOKEN_FIELD_NAME);
      state = 176;
      match(TOKEN_FIELD_NUMBER);
      state = 177;
      match(TOKEN_FIELD_LABEL);
      state = 179;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_FIELD_TYPE_AS_ENUM) {
        state = 178;
        match(TOKEN_FIELD_TYPE_AS_ENUM);
      }

      state = 182;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_FIELD_TYPE_AS_STRING) {
        state = 181;
        match(TOKEN_FIELD_TYPE_AS_STRING);
      }

      state = 185;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_FIELD_EXTENDEE) {
        state = 184;
        match(TOKEN_FIELD_EXTENDEE);
      }

      state = 188;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_DEFAULT_VALUE) {
        state = 187;
        match(TOKEN_DEFAULT_VALUE);
      }

      state = 191;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_ONE_OF_INDEX) {
        state = 190;
        match(TOKEN_ONE_OF_INDEX);
      }

      state = 194;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_JSON_NAME) {
        state = 193;
        match(TOKEN_JSON_NAME);
      }

      state = 199;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_FIELD_OPTION_JS_TYPE) {
        state = 196;
        fieldOption();
        state = 201;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldOptionContext fieldOption() {
    dynamic _localctx = FieldOptionContext(context, state);
    enterRule(_localctx, 34, RULE_fieldOption);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 202;
      match(TOKEN_FIELD_OPTION_JS_TYPE);
      state = 206;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_OPTION_TARGET_TYPE) {
        state = 203;
        match(TOKEN_OPTION_TARGET_TYPE);
        state = 208;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 212;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 25, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 209;
          match(TOKEN_UNINTERPRETED_OPTION); 
        }
        state = 214;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 25, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
